system/themes/default/src/main.css
/* ... */
h2.sub_headline_update {
	background:url("images/update.gif") no-repeat left center;
}
h2.sub_headline_index {
	background:url("images/index.gif") no-repeat left center;
}
.tl_message {
	margin:18px 18px 0;
}
.tl_gerror {
	margin:12px 6px 6px;
	padding:2px 0 3px 20px;
	background:url("images/error.gif") no-repeat left center;
}
.tl_error,.tl_confirm,.tl_info,.tl_new {
	margin:1px 0 0;
	padding:4px 5px 5px 25px;
	border-radius:3px;
}
.tl_error {
	background:#faeeee url("images/error.gif") no-repeat 5px center;
}
.tl_confirm {
	background:#f3f8ee url("images/ok.gif") no-repeat 5px center;
}
.tl_info {
	background:#eff5fa url("images/show.gif") no-repeat 6px center;
}
.tl_new {
	background:#fff3e0 url("images/featured.gif") no-repeat 5px center;
}
.tl_gerror,.tl_gerror a,.tl_error,.tl_error a {
	color:#c33;
}
.tl_confirm,.tl_confirm a {
	color:#77ac45;
}
.tl_info,.tl_info a {
	color:#4b85ba;
}
.tl_new,.tl_new a {
	color:#d68c23;
}
#lu_message {
	margin-top:0;
}
#lu_message .tl_confirm,#lu_message .tl_info {
	padding-left:18px;
	background-position:left center;
	background-color:transparent;
}
.nobg .tl_error,.nobg .tl_confirm,.nobg .tl_info,.nobg .tl_new {
	background-color:transparent;
}
.tl_permalert {
	margin:0;
	background-image:none;
	padding:8px 12px 10px;
	border-top:1px solid #ccc;
}
.tl_permalert a {
	float:right;
	margin:1px 3px 0 24px;
	color:#555;
}

/* Filter */
.tl_panel,.tl_version_panel {
	padding:6px 6px 7px 0;
	background:#f3f3f3;
	border-top:1px solid #fff;
	border-bottom:1px solid #bbb;
	text-align:right;
}
.tl_panel_bottom {
	margin-top:1px;
	padding:6px 6px 6px 0;
	background:#f3f3f3;
	border-top:1px solid #bbb;
	text-align:right;
}
.tl_version_panel .tl_select {
	width:240px;
}
.mac .tl_version_panel .tl_select,.mac .tl_panel_bottom .tl_select {
	font-size:11px;
}
.safari .tl_version_panel,.ie .tl_version_panel {
	overflow:hidden; /* see #5854 */
}
.tl_version_panel .tl_formbody {
	position:relative;
}
.safari .tl_version_panel .tl_formbody,.ie .tl_version_panel .tl_formbody {
	float:right; /* see #5854 */
}
.tl_version_panel .tl_submit {
	margin-top:1px;
	vertical-align:top;
}
.webkit .tl_version_panel .tl_submit,.ie .tl_version_panel .tl_submit {
	padding-top:4px;
	padding-bottom:4px;
}
.opera .tl_version_panel .tl_submit {
	padding-top:3px;
	padding-bottom:3px;
	margin-top:-1px;
}
.tl_version_panel img {
	position:relative;
	top:4px;
	vertical-align:top;
}
.tl_subpanel {
	padding-left:24px;
	float:right;
}
.tl_subpanel strong {
	line-height:21px;
}
.tl_submit_panel {
	padding-left:6px;
}
.tl_img_submit {
	position:relative;
	top:3px;
	vertical-align:top;
}
.tl_panel .active,.tl_panel_bottom .active,#search .active {
	background:#ffd;
}
.tl_panel .tl_select {
	width:116px;
}
.tl_filter .tl_select {
	width:104px;
}
.tl_limit .tl_select {
	width:90px;
}
.tl_search .tl_text {
	width:66px;
}
.mac .tl_panel .tl_select,.mac .tl_panel .tl_text {
	font-size:11px;
}
.mac .tl_panel select {
	max-width:164px;
}

/* Boxes */
.tl_xpl,.tl_formbody_edit {
	padding:0 18px;
}
.popup .tl_formbody_edit {
	padding-bottom:52px;
}
.tl_tbox {
	padding:0 0 26px;
}
.tl_box {
	padding:12px 0 26px;
	border-top:1px solid #ddd;
}
.tl_box h3,.tl_tbox h3,.tl_xpl h3 {
	margin:0;
	padding:14px 0 1px;
	font-weight:bold;
}
.tl_box h4,.tl_tbox h4 {
	margin:6px 0 0;
	padding:0;
	font-weight:bold;
	font-size:11px;
}
.tl_tbox.theme_import h3,.tl_tbox.theme_import h4,.tl_tbox.theme_import p {
	line-height:1.5;
}
.tl_help,.tl_help a {
	margin-bottom:0;
	padding:1px 0;
	line-height:normal;
	font-size:10px;
	color:#999;
}
.tl_help a:hover,.tl_help a:focus,.tl_help a:active {
	text-decoration:underline;
}
.tl_formbody_submit {
	border-top:1px solid #bbb;
}
.popup .tl_formbody_submit {
	position:fixed;
	left:0;
	bottom:0;
	width:100%;
	height:52px;
}
.tl_submit_container {
	padding:12px 18px;
	background:#f3f3f3;
	border-top:1px solid #fff;
}
.maintenance_inactive .tl_submit_container {
	background:none;
	margin:-12px 0 28px;
	padding-top:0;
	padding-bottom:0;
	border:0;
}
.maintenance_inactive {
	margin-top:48px;
}
#tl_buttons+.maintenance_inactive {
	margin-top:0;
}
#search {
	margin:18px 18px -9px;
	text-align:right;
}
#search .tl_text {
	width:160px;
	padding:3px 2px;
}
.mac #search .tl_text {
	padding:4px 2px;
}
.tl_edit_preview {
	margin:18px 18px 6px;
}
.tl_edit_preview img {
	padding:2px;
	border:1px solid #ddd;
	background:#fff;
	box-shadow:0 1px 3px #ddd;
}

/* Rebuild the search index */
#tl_rebuild_index {
	padding:0 18px 18px;
	line-height:1.5;
}
#index_note {
	margin:24px 0 18px;
	padding:11px 12px 12px;
	background:#ffc;
	border:1px solid #f90;
	line-height:1;
	font-size:14px;
}
#index_loading {
	margin:0 0 12px;
	padding:12px 12px 12px 36px;
	background:url("images/loading.gif") no-repeat 2px center;
	line-height:1;
	font-size:16px;
	color:#4b85ba;
}
#index_complete {
	margin:0 0 12px;
	padding:12px 12px 12px 36px;
	background:url("images/help.gif") no-repeat left center;
	line-height:1;
	font-size:16px;
	color:#77ac45;
}

/* Listing */
.tl_listing {
	width:705px;
	margin:2px 0 !important;
}
.tl_listing_container {
	padding:2px 0;
	margin:24px 18px;
}
.tl_folder_list,.tl_folder_tlist {
	padding:2px 0 3px;
	border-bottom:1px solid #e9e9e9;
	background:#f3f3f3;
	font-weight:bold;
}
.tl_folder_tlist {
	border-top:1px solid #e9e9e9;
}
.tl_file,.tl_file_list {
	padding:1px 0;
	border-bottom:1px solid #e9e9e9;
	background:#fff;
}
.tl_file_list {
	padding:2px 0 3px;
}
.tl_right_nowrap {
	padding:2px 0;
	text-align:right;
	white-space:nowrap;
}
.tl_file a:hover,.tl_file a:focus,.tl_file a:active {
	color:#555;
}
.tl_listing_container .tl_content ul li > * {
	vertical-align:middle;
}

/* List view */
.tl_listing tr.odd td {
	background-color:#fafafa;
}
.tl_listing th,.tl_listing td {
	padding-left:6px !important;
	padding-right:6px !important;
}
.list_view .tl_listing img {
	vertical-align:-4px;
}
.list_view .tl_listing img.theme_preview {
	margin:3px 6px 3px 0;
	vertical-align:middle;
}
/* ... */

